# string_weasels

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  target.py  test_weasels.py  weasels.py
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: ci.yml
tests/: test_performance.py  test_weasels.py
