[tool.poetry]
name = "string-weasels"
version = "1.0"
description = "Python version of Richard Dawkins' Weasel program"
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
license = "MIT"
readme = "README.md"
packages = [{include = "string_weasels"}]

[tool.poetry.dependencies]
python = "^3.9"
python-Levenshtein = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
