[project]
name = "string-weasels"
version = "1.1"
description = "Python version of Richard Dawkins' Weasel program"
authors = [{ name = "Brandon Corfman", email = "bcorfman@fastmail.fm" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Levenshtein>=0.26.0,<1",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
